--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                          <img src="assets/images/mp-294x157.png" alt="Mobirise" title="" style="height: 4.9rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">Motor Plus <br>El Salvador</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">Motor Plus <br>El Salvador</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/z">best free html templates</a></section><section class="header9 cid-r2DsEgQZaY mbr-fullscreen mbr-parallax-background" id="header9-6">
+<section class="engine"><a href="https://mobiri.se/l">free site templates</a></section><section class="header9 cid-r2DsEgQZaY mbr-fullscreen mbr-parallax-background" id="header9-6">
 
     
 
