create github pages

--- a/index.html
+++ b/index.html
@@ -65,20 +65,23 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/f">easy site maker</a></section><section class="header9 cid-r2DsEgQZaY mbr-parallax-background" id="header9-6">
+<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="header11 cid-r2DMafRxDv mbr-parallax-background" id="header11-c">
 
+    <!-- Block parameters controls (Blue "Gear" panel) -->
     
+    <!-- End block parameters -->
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(193, 193, 193);">
+    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);">
     </div>
-
-    <div class="container">
-        <div class="media-container-column mbr-white col-md-8">
-            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-2">Confiabilidad y Excelencia</h1>
+    <div class="container align-left">
+        <div class="media-container-column mbr-white col-md-12">
             
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">En nuestro Taller encontraras los mejores profesionales automotrices, brindandote soluciones de calidad, confia en nosotros y no te arrepentiras.</p>
-            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="index.html">NUESTROS SERVICIOS</a>
-                <a class="btn btn-md btn-white display-4" href="index.html">CONTACTENOS</a></div>
+            <h1 class="mbr-section-title py-3 mbr-fonts-style display-2"><br><br><strong>Confiabilidad y Excelencia</strong><br></h1>
+            <p class="mbr-text py-3 mbr-fonts-style display-5"><strong>
+                En nuestro Taller encontraras los mejores <br>profesionales automotrices, brindandote <br>soluciones de calidad, confia en nosotros <br>y no te arrepentiras.</strong><br>
+            </p>
+            <div class="mbr-section-btn py-4"><a class="btn btn-md btn-primary display-4" href="index.html">Nuestros Servicios</a>
+                    <a class="btn btn-md btn-white-outline display-4" href="index.html">Contactenos</a></div>
         </div>
     </div>
 
